# gunita

./: .gitignore  Cargo.toml  README.md
.claude/agents/: code-quality-reviewer.md  correctness-reviewer.md  media-pipeline-reviewer.md  security-reviewer.md
.claude/commands/: consult.md  review.md  ship-it.md  test.md
.husky/: pre-commit  pre-push
migrations/: 001_init.sql  002_add_cid.sql
scripts/: expose.sh
src/: cache.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  processing.rs  salita_client.rs  state.rs
src/api/: browse.rs  collections.rs  media.rs  memories.rs  mod.rs
static/: app.js  index.html  style.css
