[package]
license = "MIT OR Apache-2.0"
name = "gunita"
version = "0.1.0"
edition = "2021"
description = "Household memory bank and player"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
imagepipe = "0.5"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
mime_guess = "2"
bytes = "1"
tempfile = "3"
dirs = "5"
